# screen_mirror

./: .gitignore
lv_projector/src/: Makefile  lv_conf.h  lv_pro_launcher.c  lv_pro_launcher.h  main.c
lv_projector/src/AWCast/: awcast.c  cedarx_player_dlna.c
lv_projector/src/AWCast/include/: miracast2.h  wfd_player.h
lv_projector/src/AWCast/src/: Makefile
lv_projector/src/AWCast/src/libwfd2/: Makefile  miracast2.cpp
lv_projector/src/AWCast/src/libwfd2/tina_sink/: layerControl_de2.c
lv_projector/src/AWCast/src/wfd_player/: Makefile  WFDPlayer2.cpp  WFDPlayer2.h  WFDRTSPThread.cpp  WFDRTSPThread.h
lv_projector/src/AWCast/src/wfd_player/playback/: player.c
lv_projector/src/AWCast/src/wfd_sink/: WFDSink.h
lv_projector/src/AWCast/src/wpa_client/: Makefile
lv_projector/src/Bluetooth/: lv_pro_bt_activity.c
lv_projector/src/Common/disk_manager/: DiskManager.c
lv_projector/src/Common/parser_ini/: user_config.c
lv_projector/src/Common/setting/: system_setting.c  system_setting.h
lv_projector/src/Common/sys_param/: sys_param.c
lv_projector/src/Factory_test/: factory_common.c  factory_hdmi.c  factory_media.c
lv_projector/src/Layer/ota/: ota_update.c
lv_projector/src/Layer/powerkey/: lv_power_key.c
lv_projector/src/Media/Movie/: lv_pro_movie_activity.c  lv_pro_movie_list_activity.c
lv_projector/src/Media/Picture/: lv_pro_picture_activity.c  lv_pro_picture_list_activity.c
lv_projector/src/Media/middle_ware/: lv_pro_res_media_player_int.c  lv_pro_res_media_player_int.h  lv_pro_res_picture_player_int.c
lv_projector/src/Network/: lv_pro_res_wifi.c
lv_projector/src/ProjectorAdapter/: INTEGRATION_GUIDE.md  mirror_event_handler.c  projector_adapter.c  projector_adapter.h  projector_adapter_internal.h  ui_event_handler.c
lv_projector/src/ProjectorAdapter/examples/: basic_integration.c
lv_projector/src/Setting/: lv_image_page.c  lv_keystone_page.c  lv_pro_setting.c  lv_sound_page.c  lv_system_page.c  system_auto_sleep.c
lv_projector/src/Source/: lv_pro_source.c  lv_pro_source.h
lv_projector/src/System/: system_init.c
lv_projector/src/System/display/: lv_display.c
lv_projector/src/System/hdmi/: hdmi_control.c  hdmi_control.h  hdmi_resolution.c  hdmi_resolution.h
lv_projector/src/System/hdmi/cec/: cec_control.c
lv_projector/src/System/ksc/: lv_ksc.c  lv_ksc.h
lv_projector/src/WirelessSP/: lv_pro_wirelesssp.c
lv_projector/src/include/: projector_config.h
screenmirror_demo/: CMakeLists.txt  README.md
screenmirror_demo/qml/: main.qml
screenmirror_demo/qml/components/: ControlPanel.qml  DeviceListView.qml  StatusIndicator.qml  WiFiListView.qml
screenmirror_demo/qml/pages/: MainPage.qml  MirrorPage.qml  WiFiPage.qml
screenmirror_demo/resources/: qml.qrc
screenmirror_demo/src/: main.cpp  screenmirror_manager.cpp  screenmirror_manager.h  wifi_manager.cpp  wifi_manager.h
screenmirror_lib/: .gitignore  CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  README.md
screenmirror_lib/include/: screenmirror.h  screenmirror_internal.h
screenmirror_lib/include/bsp/: awcast_api.h
screenmirror_lib/include/network/: discovery.h  transport.h
screenmirror_lib/include/platform/: cedarx_platform.h
screenmirror_lib/include/protocols/: airplay.h  dlna.h  miracast.h  wfd_protocol.h  wired.h  wireless.h
screenmirror_lib/src/connectivity/: bt_core.c  bt_core.h  wifi_core.c  wifi_core.h
screenmirror_lib/src/core/: event_system.c  mirror_engine.c  state_machine.c
screenmirror_lib/src/network/: discovery.c  transport.c
screenmirror_lib/src/platform/: cedarx_platform.c
screenmirror_lib/src/protocols/airplay/: airplay.c
screenmirror_lib/src/protocols/dlna/: dlna.c
screenmirror_lib/src/protocols/miracast/: miracast.c
screenmirror_lib/src/protocols/wired/: wired.c
screenmirror_lib/src/protocols/wireless/: wfd_protocol.c  wireless.c
screenmirror_lib/test/: test_main.c
screenmirror_lib/tests/: projector_adapter_test.c
